--- a/react-boilerplate/src/components/molecules/Navbar/styles.scss
+++ b/react-boilerplate/src/components/molecules/Navbar/styles.scss
@@ -24,9 +24,7 @@
     color: red;
   }
 
-  select {
-    height: 100%;
-    border-radius: 5px;
-    padding: 10px;
+  .dropdown {
+    margin-right: 100px;
   }
 }
